<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/back1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/linearLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25dp">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/register_family"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />


                <EditText
                    android:id="@+id/id_family"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="55dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edt_bg"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:hint="@string/ID_Mother"
                    android:inputType="text"
                    style="@style/AppTheme"

               />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edt_bg"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"                    android:hint="@string/name"

                    android:inputType="text"
                    style="@style/AppTheme"

                    android:id="@+id/name_family" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edt_bg"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"                     android:hint="@string/password"
                    android:inputType="textPassword"
                    style="@style/AppTheme"
                    android:id="@+id/password_family" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edt_bg"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:hint="@string/Confirm_pass"
                    android:inputType="textPassword"
                    style="@style/AppTheme"

                    android:id="@+id/confirm_pass_family" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edt_bg"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:hint="@string/phone"
                    android:inputType="text"
                    style="@style/AppTheme"
                    android:id="@+id/phone_family" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edt_bg"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:hint="@string/Department"
                    android:inputType="text"
                    style="@style/AppTheme"
                    android:id="@+id/dep_family" />

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/Regist"
                android:id="@+id/regist_family"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp" />

        </RelativeLayout>
</ScrollView>