<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back"
        android:orientation="vertical"
        tools:context="com.alatheer.refaaq.ProfileKafeelActivity">



        <RelativeLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo"
                app:civ_border_color="#FFf"
                app:civ_border_width="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"

                />
        </RelativeLayout>

        <TextView
            android:layout_marginTop="10dp"
                android:layout_width="match_parent"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/name1"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/nunber"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:layout_margin="10dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/aytam"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_height="60dp"
        android:background="@drawable/button"/>
    <Button
        android:layout_margin="10dp"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="60dp"
        android:background="@drawable/button"/>
</LinearLayout>
    </LinearLayout>
</FrameLayout>